# artcrm-supervisor

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  RUNBOOK.md  STATUSES.md  art-marketing.xlsx  pyproject.toml
.claude/handoffs/: 2026-03-26-095046-scout-agent-rework.md  2026-04-19-150757-cost-tracking-crm-sync.md
docs/: AGENTS.md  IMPROVEMENT-IDEAS.md  STATUSES.md  ai-tools-audit.md  api-audit.md  generalization-plan.md  markets-strategy.md  open-brain-guide.md  plein-air-strategy.md  sync-2026-04-19.md
docs/superpowers/plans/: 2026-04-10-general-marketing.md  2026-04-12-agent-memory.md
docs/superpowers/specs/: 2026-04-10-general-marketing-design.md  2026-04-12-agent-memory-design.md
scripts/: import_contacts_leads.py  import_studies.py  mcp-server  migrate.py  setup_memory.py
src/: config.py  mission.py
src/api/: main.py
src/api/routers/: activity.py  approval.py  contacts.py  drafts.py  inbox.py  marketing.py  people.py  research.py
src/db/: connection.py
src/db/migrations/: 001_agent_tables.sql  002_people_table.sql  003_research_queue.sql  004_cities_and_scans.sql  005_city_market_context.sql  006_contact_scan_level.sql  007_networking_visit_status.sql  008_enriched_at.sql  009_contact_field_notes.sql  010_marketing_tables.sql  011_outreach_outcomes.sql  012_outreach_outcomes_unique.sql
src/marketing/: research_agent.py  run_research.py  run_strategy.py  strategy_agent.py
src/mcp/: server.py
src/supervisor/: graph.py  run.py  run_blocked_report.py  run_email_audit.py  run_enrichment.py  run_followup.py  run_interview.py  run_outreach.py  run_outreach_analysis.py  run_requeue_unsent.py  run_research.py  run_scout.py  targets.py
src/tools/: __init__.py  costs.py  db.py  email.py  llm.py  marketing_db.py  memory.py  search.py
src/ui/static/: style.css
src/ui/templates/: activity.html  approval.html  base.html  contact_brief.html  contact_detail.html  contacts.html  contacts_print.html  drafts.html  dropped.html  inbox.html  marketing.html  people.html  research.html  strategy.html
src/ui/templates/partials/: approval_list.html  drafts_list.html  observations_list.html
tests/: conftest.py  test_marketing_db.py  test_mcp_marketing.py  test_memory.py  test_research_agent.py  test_strategy_agent.py  test_supervisor.py  test_tools.py
