[project]
name = "artcrm-supervisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "mcp[cli]>=1.0.0",
    "mistune>=3.0.0",
    "artcrm-research-agent",
    "artcrm-enrichment-agent",
    "artcrm-scout-agent",
    "artcrm-outreach-agent",
    "artcrm-followup-agent",
    "artcrm-interview-agent",
]

[project.optional-dependencies]
agents = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "duckduckgo-search>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.scripts]
supervisor = "src.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
artcrm-research-agent = { path = "../artcrm-research-agent", editable = true }
artcrm-enrichment-agent = { path = "../artcrm-enrichment-agent", editable = true }
artcrm-scout-agent = { path = "../artcrm-scout-agent", editable = true }
artcrm-outreach-agent = { path = "../artcrm-outreach-agent", editable = true }
artcrm-followup-agent = { path = "../artcrm-followup-agent", editable = true }
artcrm-interview-agent = { path = "../artcrm-interview-agent", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
